add filters request
